# book_inventory

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: build-deploy.yml
src/book_inventory/: inventory.py
tests/: conftest.py  test_inventory.py
