[project]
name = "book-inventory"
version = "0.1.0"
description = ""
authors = [
    {name = "abby",email = "ambikha.gowrishankar@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[tool.uv.sources]
book-inventory = { workspace = true }

[dependency-groups]
dev = [
    "book-inventory",
]

